# passgen-desktop

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: rust.yml
distrib/egui_glow-0.28.1/: .cargo_vcs_info.json  Cargo.toml
distrib/egui_glow-0.28.1/src/: painter.rs
src/: gen_engine.rs  generator.rs  ico.rs  main.rs  text_processor.rs  ui.rs
