[package]
name = "passgen-desktop"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A simple password generator."
authors = ["Mamontov Konstantin <k@mamont.xyz>"]
build = "build.rs"

[dependencies]
rand = "*"
egui = "*"
#eframe = { version = "*", default-features = false, features = ["default_fonts", "wayland", "persistence", "wgpu"] }#for wayland build
#eframe = { version = "*", default-features = false, features = ["default_fonts", "x11", "persistence", "wgpu"] }#for x11 build
eframe = { version = "*", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }#for Windows build
egui_extras = { version = "*", features = ["all_loaders"] }
arboard = "*"
image = { version = "*", features = ["jpeg", "png"] }

# Reduce the size of the executable  file:
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'
strip = true

[build-dependencies]
#windows_exe_info = "*"
